<resources>
    <string name="app_name">Evolution</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Log Out</string>

    //Main Activity
    <string name="unameHint">Email ID</string>
    <string name="nameHint">Name</string>
    <string name="passHint">Password</string>
    <string name="btnTxt">Login</string>

    //Admin Activity
    <string-array name="adminTabs">
        <item>See Activity</item>
        <item>Add User</item>
    </string-array>
    <string name="signup_btn">Add</string>

    //Volunteer Activity
    <string name="volunteersubmit">Button</string>
    <string name="cond_basin">Condition of Basins</string>
    <string name="cond_urinal">Condition of Urinals</string>
    <string name="cond_taps">No of working taps</string>
    <string name="no_buck_tumb">No. of buckets and tumblers are same</string>
    <string name="present_tumbler">No. of Tumbler</string>
    <string name="present_bucket">No. of Bucket</string>
    <string name="cond_washroom">Overall condition of washroom</string>
    <string name="flow_basin">Flow of water in Basin</string>
    <string name="flow_urinal">Flow of water in Urinal</string>
    <string name="cond_mirror">Condition of Mirrors</string>
    <string name="drainage_clogging">Drainage Clogging</string>
    <string name="stinking">Stinking</string>
    <string name="no_dustbin">Number of dustbins</string>
    <string name="latch_doors">Latch on all doors</string>
    <string name="comments">Comments</string>
    <string name="cond_shade">Fabric Shade</string>
    <string name="need_repair">Needs Repairing</string>
    <string name="isclean">Not Clean</string>
    <string name="no_blackboard">Number of blackboards</string>
    <string name="cond_blackboard">Condition of blackboard</string>
    <string name="cond_color">Condition of color</string>
    <string name="label">How many times does the sweeper clean the following per day?</string>
    <string name="boys">Boy\'s Washroom</string>
    <string name="girls">Girl\'s Washroom</string>
    <string name="corridor">School Corridor</string>
    <string name="campus">School Campus</string>
    <string name="water">Drinking Water Area</string>
    <string name="dishwash">Dishwashing Area</string>
    <string name="classroom">Classrooms</string>
    <string name="storageroom">Storage Rooms</string>
    <string name="emptydustbin">Emptying the Dustbins</string>
    <string name="clean_midday">How clean is the mid-day meal area?</string>
    <string name="clean_campus">How clean is school yard/compound?</string>
    <string name="no_basin">No of Basin</string>
    <string name="no_urinals">No. of Urinals</string>
    <string name="no_taps">No. of Taps</string>
    <string name="reg_clean_tank">Regularity of Cleaning Water Tank</string>
    <string name="water_tank_purifier">Water Tank And Purifier</string>
    <string name="water_purifier">Is the water purifier working properly?</string>
    <string name="filling_tank_freq">Frequency of filling the tank per day</string>
    <string name="filling_tank_freq_ans">no. of times in a day</string>
    <string name="water_tank_capacity">Capacity of Water Tank</string>
    <string name="water_tank_capacity_ans">Capacity in Litre</string>
    <string name="water_no_taps">No. of taps:</string>
    <string name="water_broken_taps">No. of broken taps</string>
    <string name="water_reg_flow">Regular flow of water?</string>
    <string name="cleanliness_around_drink_area">Cleanliness of area around drinking water area</string>
    <string name="tap_leakage">Leakage of taps?</string>
    <string name="drain_clogging">Drainage Clogging?</string>
    <string name="stinking_in_drink_area">Stinking?</string>
    <string name="drink_no_taps">No. of taps:</string>
    <string name="dishwash_text">Dishwashing Area</string>
    <string name="dish_wash_no_of_taps">No. of taps:</string>
    <string name="dishwash_area_broken_taps">No. of broken taps:</string>
    <string name="regular_flow_water">Regular flow of water?</string>
    <string name="clean_around_dish_wash_area">Cleanliness of area around Dishwashing water area</string>
    <string name="tap_leakage_dishwash_area">Leakage of taps?</string>
    <string name="drain_clogg_dish_wash_area">Drainage Clogging?</string>
    <string name="comment">Comments</string>
    <string name="drink_water_area">Drinking Water area</string>
    <string name="how_often">How Often</string>
    <string name="spinner2_text">How often?</string>
    <string name="spinner3_text">Select School</string>
    <string name="spinner4_text">Select Date</string>
    <string name="domain">http://192.168.137.158/</string>
    <string name="mosquito">Condition of Mosquito net</string>
    <string name="text_on">New</string>
    <string name="text_off">Upgrade</string>
    <string name="sound_system">Is sound system installed?</string>
    <string name="kitchen_midday_meals">Kitchen for mid-day meals</string>
    <string name="sports_kits">Sports kits</string>
    <string name="book_stationery">Books/Stationery distribution</string>
    <string name="amenities_culutural">Amenities for cultural programs</string>
    <string name="other_comments">Any comments</string>
    <string-array name="volunteerTabs">
        <item>Sanitation</item>
        <item>Water</item>
        <item>Campus Renovation</item>
        <item>Sweeper</item>
        <item>Others</item>
    </string-array>

</resources>
